unpackaged/main/default/objects/ChampifyIo__Champify_Field_Mapping_Field__c/ChampifyIo__Champify_Field_Mapping_Field__c.object-meta.xml
<CustomObject>
    <label>Champify Field Mapping Field</label>
    <nameField>
        <label>Champify Field Mapping Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Champify Field Mapping Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>