unpackaged/main/default/objects/ChampifyIo__Champify_Field_Mapping_Field__c/fields/ChampifyIo__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>