unpackaged/main/default/objects/ChampifyIo__Champify_Field_Mapping_Field__c/fields/ChampifyIo__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Object_Type__c</fullName>
    <label>Object Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>